// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal back button renders and functions 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <div
      class="action-modal-icon action-modal-prev"
      id="prevBtn"
    >
      <i
        class="material-icons notranslate"
      >
        arrow_back
      </i>
    </div>
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="sign"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    >
      <!---->
       
      <form>
        <tmformgroup-stub
          class="action-modal-group"
          fieldid="password"
          fieldlabel="Password"
        >
          <tmfield-stub
            id="password"
            placeholder="Password"
            type="password"
          />
           
          <!---->
        </tmformgroup-stub>
      </form>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Send"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal runs validation and changes step on sign step should display warning when using an address not in the extension 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <div
      class="action-modal-icon action-modal-prev"
      id="prevBtn"
    >
      <i
        class="material-icons notranslate"
      >
        arrow_back
      </i>
    </div>
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="sign"
        steps="Details,Fees,Sign"
      />
       
      <p
        class="form-message notice extension-address"
      >
        
        The address you are trying to send with is not available in the
        extension.
      
      </p>
    </div>
     
    <div
      class="action-modal-form"
    >
      <!---->
       
      <hardwarestate-stub
        icon="info"
      >
        <div>
          
            Please send the transaction to be signed in the Lunie Browser
            Extension.
          
        </div>
         
        <!---->
         
        <!---->
      </hardwarestate-stub>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Send"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal on success 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal waiting on inclusion 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with explore on fees step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with explore on sign step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with explore sending 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with extension on fees step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with extension on sign step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with extension sending 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on fees step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on sign step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger sending 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with local on fees step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with local on sign step 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user has logged in with local sending 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal should show the action modal when user hasn't logged in 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    >
      <p
        class="form-message notice"
      >
        
          You're using Lunie in explore mode. Sign in or create an account to
          get started.
        
      </p>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Sign In"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal shows a feature unavailable message 1`] = `
<transition-stub
  name="slide-fade"
>
  <div
    class="action-modal"
    tabindex="0"
  >
    <!---->
     
    <div
      class="action-modal-header"
    >
      <div
        class="action-modal-icon action-modal-close"
        id="closeBtn"
      >
        <i
          class="material-icons notranslate"
        >
          close
        </i>
      </div>
       
      <span
        class="action-modal-title"
      >
        Send
      </span>
       
      <steps-stub
        activestep="details"
        steps="Details,Fees,Sign"
      />
       
      <!---->
    </div>
     
    <div
      class="action-modal-form"
    />
     
    <!---->
     
    <!---->
     
    <div
      class="action-modal-footer"
    >
      <tmformgroup-stub
        class="action-modal-group"
      >
        <tmbtn-stub
          id="closeBtn"
          type="secondary"
          value="Cancel"
        />
         
        <tmbtn-stub
          type="primary"
          value="Next"
        />
      </tmformgroup-stub>
    </div>
  </div>
</transition-stub>
`;

exports[`ActionModal shows loading when there is still data to be loaded 1`] = `<!---->`;
